--- a/header.html
+++ b/header.html
@@ -11,12 +11,14 @@
     <li><a href="#portfolio-anchor">portfolio</a></li>
     <li>
       <a href="#">pages</a>
-      <ul class="sub-pages">
-        <li><a href="#">typography</a></li>
-        <li><a href="#">components</a></li>
-        <li><a href="#">search</a></li>
-        <li><a href="#">404</a></li>
-      </ul>
+      <div class="sub-pages-container">
+        <ul class="sub-pages">
+          <li><a href="#">typography</a></li>
+          <li><a href="#">components</a></li>
+          <li><a href="#">search</a></li>
+          <li><a href="#">404</a></li>
+        </ul>
+      </div>
     </li>
     <li><a href="https://certy.px-lab.com/html/demo1/category.php">blog</a></li>
     <li><a href="#contact-anchor">contact</a></li>
