Update experience area

--- a/main.html
+++ b/main.html
@@ -98,25 +98,41 @@
 
   <!-- -------------------------------------------------------------------------------- -->
 
-  <div class="content">
+  <div id="experience" class="content">
     <h1 id="experience-anchor">work experience</h1>
     <table>
       <tr>
         <td class="work-experience-data-left">Jan <strong>2014</strong> - Mar <strong>2016</strong></td>
-        <td work-experience-data-right"><strong>Full Stack Developer</strong><br><br><img src="https://certy.px-lab.com/html/demo1/assets/images/uploads/experience/logo-audio-jungle.png" alt="Picture"> IBBA
-          Group Your brand is the core of your marketing, the central theme around your
-          products and services. Your brand is not your Logo or your Company Name</td>
+        <td class="work-experience-data-right">
+          <div class="heading">Full Stack Developer</div>
+          <div class="image"><img src="https://certy.px-lab.com/html/demo1/assets/images/uploads/experience/logo-audio-jungle.png" alt="Picture"></div>
+          <div class="name">IBBA</div>
+          <div class="text">
+            Group Your brand is the core of your marketing, the central theme around your
+            products and services. Your brand is not your Logo or your Company Name
+          </div>
+        </td>
       </tr>
       <tr>
         <td class="work-experience-data-left">Jan <strong>2014</strong> - Mar <strong>2016</strong></td>
-        <td work-experience-data-right"><strong>Systems Analyst / Web Developer</strong><br><br><img src="https://certy.px-lab.com/html/demo1/assets/images/uploads/experience/logo-themeforest.png" alt="Picture"> <br>Loft Studio Your
-          brand is the core of your marketing, the central theme around your products and
-          services.</td>
+        <td class="work-experience-data-right">
+          <div class="heading">Systems Analyst / Web Developer</div>
+          <div class="image"><img src="https://certy.px-lab.com/html/demo1/assets/images/uploads/experience/logo-themeforest.png" alt="Picture"></div>
+          <div class="name">Loft Studio</div>
+          <div class="text">
+            Your brand is the core of your marketing, the central theme around your products and services.
+          </div>
+        </td>
       <tr>
         <td class="work-experience-data-left">Jan <strong>2014</strong> - Mar <strong>2016</strong></td>
-        <td class="work-experience-data-right"><strong>Full Stack Developer</strong><br><br><img src="https://certy.px-lab.com/html/demo1/assets/images/uploads/experience/logo-envato.png" alt="Picture"><br>Stu Unger Rise Your
-          brand is the core of your marketing, the central theme around your products and
-          services.</td>
+        <td class="work-experience-data-right">
+          <div class="heading">Full Stack Developer</div>
+          <div class="image"><img src="https://certy.px-lab.com/html/demo1/assets/images/uploads/experience/logo-envato.png" alt="Picture"></div>
+          <div class="name">Stu Unger</div>
+          <div class="text">
+            Rise Your brand is the core of your marketing, the central theme around your products and services.
+          </div>
+        </td>
       </tr>
     </table>
   </div>
