--- a/main.html
+++ b/main.html
@@ -206,11 +206,11 @@
 
   <!-- -------------------------------------------------------------------------------- -->
 
-  <div class="content">
+  <div id="references" class="content">
     <h1 id="references-anchor">REFERENCES</h1>
-    <table>
+    <table id="reference-list">
       <tr>
-        <td><img class="references-images" src="https://certy.px-lab.com/html/demo1/assets/images/uploads/avatar/avatar-54x54-01.png" alt="Picture></td>
+        <td><img class="references-images" src="https://certy.px-lab.com/html/demo1/assets/images/uploads/avatar/avatar-54x54-01.png" alt="Picture"></td>
         <td>
           <h4>HATTIE MAXWELL</h4>
           <p>West Alexandrine</p>
@@ -218,12 +218,12 @@
       </tr>
       <tr>
         <td></td>
-        <td>Your brand is the core of your marketing,
+        <td class="border-bottom table-data-references">Your brand is the core of your marketing,
           the central theme around your products and
           services.Your brand is not your Logo or your Company Name</td>
       </tr>
       <tr>
-        <td><img class="references-images"  src="https://certy.px-lab.com/html/demo1/assets/images/uploads/avatar/avatar-54x54-02.png" alt="Picture></td>
+        <td><img class="references-images" src="https://certy.px-lab.com/html/demo1/assets/images/uploads/avatar/avatar-54x54-02.png" alt="Picture"></td>
         <td>
           <h4>FRANKLIN MAY</h4>
           <p>Modern LLC,HR</p>
@@ -231,12 +231,12 @@
       </tr>
       <tr>
         <td></td>
-        <td class="table-data-references">Your brand is the core of your marketing,
+        <td class="border-bottom table-data-references">Your brand is the core of your marketing,
           the central theme around your products and
           services.Your brand is not your Logo or your Company Name </td>
       </tr>
       <tr>
-        <td><img class="references-images"  src="https://certy.px-lab.com/html/demo1/assets/images/uploads/avatar/avatar-58x58-default.png" alt="Picture></td>
+        <td><img class="references-images" src="https://certy.px-lab.com/html/demo1/assets/images/uploads/avatar/avatar-58x58-default.png" alt="Picture"></td>
         <td>
           <h4>EDWIN BALLARD</h4>
           <p>West Alexandrine</p>
@@ -244,7 +244,7 @@
       </tr>
       <tr>
         <td></td>
-        <td class="table-data-references">Your brand is the core of your marketing,
+        <td class="border-bottom table-data-references">Your brand is the core of your marketing,
           the central theme around your products and
           services.Your brand is not your Logo or your Company Name</td>
       </tr>
@@ -264,7 +264,7 @@
       </tr>
     </table>
   </div>
-</div>
+
   <!-- -------------------------------------------------------------------------------- -->
 
   <div class="content">
